sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:13: error: Boolean does not take parameters
      if (isSorted()) {return;}
                  ^